GNOME Bugzilla – Bug 684852
File search does not handle non-ascii characters
Last modified: 2012-09-27 06:20:14 UTC
1. Create a folder with non-ascii unicode characters, such as "Lõputöö" 2. Type "Lõ" or "õ" to find it. 3. Nothing is found. Other than that, with it's current speed I cannot complain, the search in place definitely works better than the previous navigate by typing thing with unexpected timeouts and stuff. Keep up the good work!
Forgot to mention, I'm using 1:3.6.0-0ubuntu1 from gnome ppa, tracker is 0.14.1-2ubuntu1~.
What locale are you using? Your test case works fine for me with English locale.
*** Bug 684518 has been marked as a duplicate of this bug. ***
I was able to reproduce this
Pushed a fix for this now.
Hey, thanks a lot, this makes quite a difference. I hope the fix is released soon to reach my machine :)