search-engine-model: normalize both strings before comparison

Or the pattern matching will fail for non-ASCII characters.

https://bugzilla.gnome.org/show_bug.cgi?id=684852